--- a/SistemaDoLeoBlazor.WEB/wwwroot/index.html
+++ b/SistemaDoLeoBlazor.WEB/wwwroot/index.html
@@ -13,12 +13,18 @@
 </head>
 
 <body>
-    <div id="app">
+    <!--<div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
             <circle r="40%" cx="50%" cy="50%" />
         </svg>
         <div class="loading-progress-text"></div>
+    </div>-->
+    <div id="app">
+        <div class="vh-100 d-flex align-items-center justify-content-center gap-3">
+            <div class="h5 spinner-border"></div>
+            <div class="h2">Carregando...</div>
+        </div>
     </div>
 
     <div id="blazor-error-ui">
