--- a/SistemaDoLeoBlazor.WEB/Pages/CadProduto.html
+++ b/SistemaDoLeoBlazor.WEB/Pages/CadProduto.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Sistema do Leo Versão 3.0</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=cd822b7fd22c8a95a68470c795adea69">
-    <link rel="stylesheet" href="assets/css/animate.min.css?h=5512c3e92e3931978c9ddcc7dbeed22b">
-    <link rel="stylesheet" href="assets/css/Elegant-Registration-Form.css?h=b0dc555b51f71f93a50326a1d8d6e613">
-    <link rel="stylesheet" href="assets/css/Floating-Button.css?h=291f3e0b9e9d95361f682863935b0449">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
+    <link rel="stylesheet" href="assets/css/Elegant-Registration-Form.css">
+    <link rel="stylesheet" href="assets/css/Floating-Button.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.6.5/css/buttons.dataTables.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/dataTables.bootstrap4.min.css">
 </head>
@@ -19,28 +19,24 @@
             <div class="p-5">
                 <div class="text-center">
                     <h4 class="text-dark mb-4">Cadastro de Produto</h4>
-                </div><!-- Start: Register Form -->
+                </div>
                 <form class="user" method="post">
-                    <!-- Start: Title -->
-                    <div></div><!-- End: Title -->
-                    <!-- Start: Cod Prod e Inativo -->
+                    <div></div>
                     <div class="mb-3">
                         <div class="row">
-                            <!-- Start: Cod Prod -->
                             <div class="col-lg-3 col-xxl-3" style="width: 332.5px;">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h4 class="card-title">Cod. Produto</h4><!-- Start: 1 Row 2 Columns -->
+                                        <h4 class="card-title">Cod. Produto</h4>
                                         <div class="container">
                                             <div class="row">
-                                                <div class="col-md-6"><input class="form-control form-control-user" type="number" placeholder="Cod Produto" style="width: 131px;" name="Cod Produto" required="" pattern="^[1-9]\d*$"></div>
+                                                <div class="col-md-6"><input class="form-control form-control-user" type="number" placeholder="Cod Produto" style="width: 122px;" name="Cod Produto" required="" pattern="^[1-9]\d*$"></div>
                                                 <div class="col-md-6 col-xxl-6" style="width: 118.25px;margin-left: 13px;"><button class="btn btn-primary" type="button" tabindex="-1">Pesquisar</button></div>
                                             </div>
-                                        </div><!-- End: 1 Row 2 Columns -->
+                                        </div>
                                     </div>
                                 </div>
-                            </div><!-- End: Cod Prod -->
-                            <!-- Start: Inativo -->
+                            </div>
                             <div class="col">
                                 <div class="card">
                                     <div class="card-body">
@@ -48,18 +44,16 @@
                                         <div class="form-check" style="width: 94.5px;margin-top: -2px;"><input class="form-check-input" type="checkbox" id="formCheck-2" style="margin-top: 12px;" name="ChkSenha" tabindex="-1"><label class="form-check-label" for="formCheck-2" style="margin-top: 8px;">Inativo</label></div>
                                     </div>
                                 </div>
-                            </div><!-- End: Inativo -->
+                            </div>
                         </div>
-                    </div><!-- End: Cod Prod e Inativo -->
-                    <!-- Start: Nome -->
+                    </div>
                     <div class="mb-3">
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Nome</h4><input class="form-control form-control-user" type="text" id="email" placeholder="Nome" required="" name="Nome" maxlength="50">
                             </div>
                         </div>
-                    </div><!-- End: Nome -->
-                    <!-- Start: Unidade e Categoria -->
+                    </div>
                     <div class="row mb-3">
                         <div class="row">
                             <div class="col-md-6">
@@ -79,52 +73,46 @@
                                 </div>
                             </div>
                         </div>
-                    </div><!-- End: Unidade e Categoria -->
-                    <!-- Start: Valores -->
+                    </div>
                     <div class="row mb-3">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <div class="card">
                                     <div class="card-body">
                                         <h4 class="card-title">Valor</h4><input class="form-control form-control-user" type="number" placeholder="Valor" style="width: 141px;" name="Valor" required="">
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <div class="card">
                                     <div class="card-body">
                                         <h4 class="card-title">Custo</h4><input class="form-control form-control-user" type="number" placeholder="Custo" style="width: 141px;" name="Custo" required="">
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Estoque</h4><input class="form-control form-control-user" type="number" placeholder="Estoque" style="width: 141px;" name="Estoque" required="">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div><!-- End: Valores -->
-                    <hr><!-- Start: Botões -->
+                    </div>
+                    <hr>
                     <div class="row">
-                        <!-- Start: Novo -->
-                        <div class="col-md-3" style="height: 45px;">
-                            <!-- Start: Novo --><button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn" type="button" style="height: 39px;background: rgb(74,170,15);">Novo</button><!-- End: Novo -->
-                        </div><!-- End: Novo -->
-                        <!-- Start: Editar -->
-                        <div class="col-md-3" style="height: 45px;">
-                            <!-- Start: Editar --><button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-1" type="button" style="height: 39px;background: var(--bs-btn-bg);">Editar</button><!-- End: Editar -->
-                        </div><!-- End: Editar -->
-                        <!-- Start: Excluir -->
-                        <div class="col-md-3" style="height: 45px;">
-                            <!-- Start: Excluir --><button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-2" type="button" style="height: 39px;background: rgb(203,30,19);">Excluir</button><!-- End: Excluir -->
-                        </div><!-- End: Excluir -->
-                        <!-- Start: Cancelar -->
-                        <div class="col-md-3" style="height: 45px;">
-                            <!-- Start: Cancelar --><button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-3" type="button" style="height: 39px;background: rgb(228,185,34);">Cancelar</button><!-- End: Cancelar -->
-                        </div><!-- End: Cancelar -->
-                    </div><!-- End: Botões -->
+                        <div class="col-md-3" style="height: 45px;"><button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn" type="button" style="height: 39px;background: rgb(74,170,15);">Novo</button></div>
+                        <div class="col-md-3" style="height: 45px;"><button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-1" type="button" style="height: 39px;background: var(--bs-btn-bg);">Editar</button></div>
+                        <div class="col-md-3" style="height: 45px;"><button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-2" type="button" style="height: 39px;background: rgb(203,30,19);">Excluir</button></div>
+                        <div class="col-md-3" style="height: 45px;"><button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-3" type="button" style="height: 39px;background: rgb(228,185,34);">Cancelar</button></div>
+                    </div>
                     <hr><button class="btn btn-primary" data-bss-hover-animate="pulse" type="submit" style="margin: -3px;margin-left: 45%;margin-bottom: -18px;padding: 6px 12px;border-radius: 293px;height: 66px;text-align: center;margin-top: 5px;">Salvar</button>
-                </form><!-- End: Register Form -->
+                </form>
             </div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js?h=e55bde7d6e36ebf17ba0b8c1e80e4065"></script>
-    <script src="assets/js/bs-init.js?h=ec5d4df3c798a2943b2ecbac76ebfde0"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.6.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/dataTables.bootstrap4.min.js"></script>
@@ -135,7 +123,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.print.min.js"></script>
-    <script src="assets/js/DataTable---Fully-BSS-Editable-style.js?h=cdd88ce626f2ca8a1e3c5200a86a08ae"></script>
+    <script src="assets/js/DataTable---Fully-BSS-Editable-style.js"></script>
 </body>
 
 </html>
