--- a/SistemaDoLeoBlazor.WEB/wwwroot/index.html
+++ b/SistemaDoLeoBlazor.WEB/wwwroot/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <script src="js/PDFGenerate.js"></script>
     <!--<div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
@@ -32,6 +33,8 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
+
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
